Tests/TypeCheck/absurd.silt
-- RUN: %silt --verify typecheck %s

module absurd where

data Empty : Type

data NotEmpty : Type where
  inhabited : NotEmpty

magic : {A : Type} -> (x : Empty) -> A
magic ()

no-magic : {A : Type} -> (x : NotEmpty) -> A 
no-magic ()
-- expected-error@-1 {{absurd pattern of type 'absurd.NotEmpty' in clause should not have possible valid patterns}}
-- expected-note@-2 {{possible valid pattern: 'absurd.NotEmpty.inhabited'}}

